--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
         android:inputType="textEmailAddress" />
 
     <TextView
-        android:text="@string/passwd"
+        android:text="@string/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
