--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
         android:inputType="textEmailAddress" />
 
     <TextView
-        android:text="@string/passwd"
+        android:text="@string/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -38,7 +38,7 @@
         android:id="@+id/button_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login" />
+        android:text="@string/login" />
 
 
 
