--- a/app/src/main/res/layout/activity_chat_window.xml
+++ b/app/src/main/res/layout/activity_chat_window.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@id/send_btn"
         android:inputType="text"
         android:visibility="visible" />
 
