--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -21,15 +21,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/ButtonText"
-        android:visibility="visible"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="276dp" />
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="10dp"
+         />
 
-    <!--<Button-->
-        <!--android:id="@+id/start_chat"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="@string/start_chat"-->
-        <!--android:visibility="visible" />-->
+    <Button
+        android:id="@+id/start_chat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/start_chat"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="77dp" />
 
 </android.support.constraint.ConstraintLayout>
