--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,9 +21,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/ButtonText"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="10dp"
-         />
+        android:visibility="visible"
+        tools:layout_editor_absoluteX="135dp"
+        tools:layout_editor_absoluteY="199dp" />
 
     <Button
         android:id="@+id/start_chat"
@@ -33,4 +33,4 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="77dp" />
 
-</android.support.constraint.ConstraintLayout>
+</GridLayout>
