--- a/app/src/main/res/layout/chat_row_incoming.xml
+++ b/app/src/main/res/layout/chat_row_incoming.xml
@@ -9,7 +9,8 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView"
-        android:layout_gravity="right"/>
+        android:gravity="right"/>
+
 
     <ImageView
         android:id="@+id/message_in"
