--- a/app/src/main/res/layout/chat_row_outgoing.xml
+++ b/app/src/main/res/layout/chat_row_outgoing.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_gravity="right"
+        android:gravity="left"
         android:text="TextView" />
 
 </LinearLayout>
