--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -33,4 +33,11 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="77dp" />
 
+    <Button
+        android:id="@+id/weather"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Weather"
+        />
+
 </GridLayout>
