--- a/app/src/main/res/layout/activity_weather_forecast.xml
+++ b/app/src/main/res/layout/activity_weather_forecast.xml
@@ -6,4 +6,38 @@
     android:layout_height="match_parent"
     tools:context="com.example.chen.androidlabs.WeatherForecast">
 
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/curWeather"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/minTemp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/maxTemp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/windSpeed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </android.support.constraint.ConstraintLayout>
