--- a/app/src/main/res/layout/activity_weather_forecast.xml
+++ b/app/src/main/res/layout/activity_weather_forecast.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,6 +7,7 @@
     tools:context="com.example.chen.androidlabs.WeatherForecast">
 
     <ImageView
+        android:id="@+id/image"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:visibility="invisible" />
@@ -40,4 +41,4 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-</android.support.constraint.ConstraintLayout>
+</GridLayout>
