--- a/app/src/main/res/layout/activity_weather_forecast.xml
+++ b/app/src/main/res/layout/activity_weather_forecast.xml
@@ -1,44 +1,62 @@
-<?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.chen.androidlabs.WeatherForecast">
 
     <ImageView
-        android:id="@+id/image"
+        android:id="@+id/curWeather"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
         android:visibility="invisible" />
 
     <TextView
-        android:id="@+id/curWeather"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/minTemp"
+        android:id="@+id/curTemp"
+        android:text="currentTemp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/curWeather"/>
 
     <TextView
         android:id="@+id/maxTemp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="MaxTemp"
+        android:layout_toEndOf="@+id/curWeather"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/curTemp"
+        android:layout_toRightOf="@+id/curWeather"/>
+
+    <TextView
+        android:id="@+id/minTemp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MinTemp"
+        android:layout_below="@+id/maxTemp"
+        android:layout_toEndOf="@+id/curWeather"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/curWeather"/>
 
     <TextView
         android:id="@+id/windSpeed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="windSpeed"
+        android:layout_below="@+id/minTemp"
+        android:layout_toEndOf="@+id/curWeather"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/curWeather"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
 
-</GridLayout>
+</RelativeLayout>
