--- a/app/src/main/res/layout/activity_weather_forecast.xml
+++ b/app/src/main/res/layout/activity_weather_forecast.xml
@@ -9,8 +9,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:visibility="invisible" />
+        android:layout_alignParentLeft="true" />
 
     <TextView
         android:id="@+id/curTemp"
