--- a/app/src/main/res/layout/activity_message_fragment.xml
+++ b/app/src/main/res/layout/activity_message_fragment.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.chen.androidlabs.ChatDatabaseHelper">
+    tools:context="com.example.chen.androidlabs.MessageFragment">
 
 </android.support.constraint.ConstraintLayout>
