lab7 version1 cannot take the id

--- a/app/src/main/res/layout-sw600dp/activity_chat_window.xml
+++ b/app/src/main/res/layout-sw600dp/activity_chat_window.xml
@@ -35,9 +35,10 @@
         android:text="@string/send" />
 
     <FrameLayout
-        android:id="@+id/frame"
+        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+    </FrameLayout>
 
   </RelativeLayout>
 
