--- a/app/src/main/res/layout/activity_message_fragment.xml
+++ b/app/src/main/res/layout/activity_message_fragment.xml
@@ -14,28 +14,43 @@
             android:orientation="horizontal">
 
             <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="MessageHere"/>
+
+            <TextView
                 android:id="@+id/message_here"
-                android:layout_width="365dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
-                android:hint="MessageHere" />
-        </LinearLayout>s
+                />
 
-       <LinearLayout
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:orientation="horizontal">
 
-           <TextView
-               android:id="@+id/message_id"
-               android:layout_width="365dp"
-               android:layout_height="wrap_content"
-               android:layout_marginLeft="5dp"
-               android:layout_marginRight="10dp"
-               android:layout_marginTop="10dp"
-               android:hint="ID= " />
+            <TextView
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="ID = " />
+
+            <TextView
+                android:id="@+id/message_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                />
         </LinearLayout>
 
         <View
@@ -49,7 +64,7 @@
             android:layout_height="40dp"
             android:layout_marginLeft="8dp"
             android:layout_marginBottom="8dp"
-            android:text="DELETE THIS MESSAGE"
+            android:text="DELETE MESSAGE"
             />
 
     </LinearLayout>
