--- a/app/src/main/res/layout/activity_chat_window.xml
+++ b/app/src/main/res/layout/activity_chat_window.xml
@@ -1,40 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:paddingLeft="2dp"
-    android:paddingRight="2dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="com.example.chen.androidlabs.ChatWindow">
 
-    <ListView
-        android:id="@+id/list_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/send_btn"
+    <Button
+        android:id="@+id/button_send"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:visibility="visible" />
+        android:layout_alignParentBottom="true"
+        android:text="send" />
 
     <EditText
-        android:id="@+id/chat_text"
+        android:id="@+id/edittext_chat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@id/send_btn"
-        android:inputType="text"
-        android:visibility="visible" />
-
-    <Button
-        android:id="@+id/send_btn"
-        android:layout_width="96dp"
-        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:text="@string/send"
-        />
+        android:layout_toLeftOf="@+id/button_send" />
 
+    <ListView
+        android:id="@+id/listview_chat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/button_send" />
 
 </RelativeLayout>
