--- a/app/src/main/res/layout/chat_row_outgoing.xml
+++ b/app/src/main/res/layout/chat_row_outgoing.xml
@@ -6,14 +6,14 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/row_even" />
+        android:src="@drawable/row_even"
+        android:layout_gravity="left"/>
 
     <TextView
-        android:id="@+id/message_text"
+        android:id="@+id/message_out"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="left"
-        android:text="TextView" />
+        android:layout_gravity="right" />
 
 </LinearLayout>
