--- a/app/src/main/res/layout/activity_message_fragment.xml
+++ b/app/src/main/res/layout/activity_message_fragment.xml
@@ -6,24 +6,27 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/Message_fragment"
+        android:id="@+id/message_here"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
-        android:hint="  MessageHere" />
+        android:hint="@string/message_here"
+        android:gravity="right"/>
 
     <TextView
-        android:id="@+id/id_fragment"
+        android:id="@+id/message_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/Message_fragment"
-        android:hint="  ID=" />
+        android:layout_below="@+id/message_here"
+        android:layout_marginTop="17dp"
+        android:hint="@string/id_equal"
+        android:gravity="right"/>
 
     <Button
-        android:id="@+id/delete"
+        android:id="@+id/btn_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DELETE THIS MESSAGE"
