--- a/app/src/main/res/layout/fragment_multiple.xml
+++ b/app/src/main/res/layout/fragment_multiple.xml
@@ -71,14 +71,14 @@
         android:id="@+id/update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ADD"
+        android:text="update"
         android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"/>
     <Button
         android:id="@+id/delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CANCEL"
+        android:text="delete"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"/>
 
