--- a/app/src/main/res/layout/activity_create_quiz.xml
+++ b/app/src/main/res/layout/activity_create_quiz.xml
@@ -1,35 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:fillViewport="true"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
-
     <RelativeLayout android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <ListView
-            android:id="@+id/listview_multiple"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"/>
+       <TextView
+        android:id="@+id/question"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:text="  You can choose questions here or add new questions.  "/>
 
         <ListView
-            android:id="@+id/listview_tf"
+            android:id="@+id/list_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_above="@+id/button_tf"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/listview_multiple" />
-
-        <ListView
-            android:id="@+id/listview_numeric"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/listview_tf" />
+            android:layout_below="@+id/question" />
 
         <Button
             android:id="@+id/button_tf"
@@ -37,6 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
+            android:layout_alignEnd="@+id/button_multiple"
             android:text="True/False" />
 
         <Button
@@ -44,17 +32,16 @@
             android:layout_width="130dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
+
             android:text="Numeric" />
 
         <Button
             android:id="@+id/button_multiple"
             android:layout_width="130dp"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_alignEnd="@+id/listview_numeric"
             android:text="Multiple" />
 
     </RelativeLayout>
 
-</ScrollView>
