--- a/app/src/main/res/layout/activity_quiz__creater.xml
+++ b/app/src/main/res/layout/activity_quiz__creater.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.chen.final_project.Quiz_Creater"
+    tools:context="com.example.chen.final_project.com.example.chen.Quiz_Creater"
     android:orientation="vertical">
 
     <ImageButton
