--- a/app/src/main/res/layout/layout_multiple.xml
+++ b/app/src/main/res/layout/layout_multiple.xml
@@ -67,6 +67,13 @@
         android:layout_toEndOf="@+id/D_fragment"
         android:layout_below="@+id/txt_C"/>
 
+    <EditText
+        android:id="@+id/correct"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/question"
+        android:layout_toEndOf="@+id/question" />
+
     <Button
         android:id="@+id/update"
         android:layout_width="wrap_content"
